[package]
name = "bust"
version = "0.1.0"
authors = ["Anshul Goyal <anshulgoel151999@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.3"
prettytable-rs = "0.8.0"
tokio = { version = "0.2.13", features = ["fs","tcp","macros"] }
futures = "0.3.4"
http = "0.2.0"
tokio-tls = "0.3.0"
native-tls = "0.2.4"
anyhow = "1.0.28"
trust-dns-resolver = "0.19.3"
mime = "0.3.16"
mime_guess = "2.0.3"
spinners = "1.2.0"